--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.x'
 
-      - run: flutter pub get
-      - run: flutter build appbundle
+      - name: Install dependencies
+        run: flutter pub get
+        working-directory: .
+
+      - name: Build app bundle
+        run: flutter build appbundle
+        working-directory: .
